Add test line to confirm changes tracked

--- a/final-project-proposal.qmd
+++ b/final-project-proposal.qmd
@@ -8,3 +8,5 @@ editor: visual
 ## Project Title
 
 Predicting Daily Step Counts from Fitness Tracker Data.
+
+TEST-LINE Sun, Nov  2, 2025 10:28:02 PM
