--- a/final-project-proposal.qmd
+++ b/final-project-proposal.qmd
@@ -104,3 +104,11 @@ The dataset includes daily activity records for 30 users over several months. It
 -   minuteSleep_merged.csv
 
 This dataset is clean and detailed, making it a great fir for exploring relationships among physical activity, calories burned, and sleep behavior.
+
+### Research Questions
+
+1.  **Is there a relationship between calories burned and total time spent asleep?**
+
+    This question explores whether higher energy expenditure during the day is associated with longer or shorter sleep durations at night. By comparing daily calorie burn and total minutes asleep, the analysis can reveal patterns in how physical activity influences rest and recovery. Understanding this relationship can also provide insights into how lifestyle habits impact overall well-being.
+
+2.  
